# rust-P2P-chat-cli

./: Cargo.toml  DEVDOCS.md  README.md
peer-cli/: Cargo.toml
peer-cli/src/: main.rs
peer-common/: Cargo.toml
peer-common/src/: crypto.rs  lib.rs  types.rs
peer-core/: Cargo.toml
peer-core/src/: discovery.rs  lib.rs  net.rs  persistence.rs
