[package]
name = "peer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
peer-common = { path = "../peer-common" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
base64 = "0.21"
notify-rust = { version = "4.0", optional = true }
colored = "2.0"
chrono = "0.4"
dirs = "5.0"

[features]
notify = ["notify-rust"]
